--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-nav></app-nav>
 
-<div class="container" style="margin-top: 100px;">
+<div class="container" style="margin-top: 100px">
     <ul>
         <li *ngFor="let user of users">{{ user.id }} - {{ user.username }}</li>
     </ul>
 </div>
-
