--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -13,6 +13,6 @@
     </div>
     <div class="text-center">
         <button class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default" type="button">Cancel</button>
+        <button class="btn btn-default" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
