--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -31,14 +31,14 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button class="btn btn-success col-12">Save Changes</button>
+                <button class="btn btn-success col-12" form="editForm">Save Changes</button>
             </div>
         </div>
     </div>
     <div class="col-8">
         <tabset class="member-tabset">
             <tab heading="About {{ member.knownAs }}">
-                <form>
+                <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
                     <h4 class="mt-2">Description</h4>
                     <textarea
                         class="form-control"
