--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,7 +2,22 @@
     <h2 class="text-center text-primary">Sign Up</h2>
     <hr />
 
+    <div class="mb-3">
+        <label style="margin-right:10px">I am a: </label>
+        <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="male" formControlName="gender">Male
+        </label>
+        <label class="form-check-label">
+            <input type="radio" class="form-check-input ms-3" value="female" formControlName="gender">Female
+        </label>
+    </div>
+
     <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]="'Username'"> </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" [label]="'Known As'"> </app-text-input>
+    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" [maxDate]="maxDate" [label]="'Date of Birth'"> </app-date-picker>
+    <app-text-input [formControl]="$any(registerForm.controls['city'])" [label]="'city'"> </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['country'])" [label]="'country'"> </app-text-input>
+
     <app-text-input [formControl]="$any(registerForm.controls['password'])" [type]="'password'" [label]="'Password'">
     </app-text-input>
     <app-text-input
