--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -13,11 +13,11 @@
                 </div>
                 <div>
                     <strong>Last active:</strong>
-                    <p>{{member.lastActive | date }}</p>
+                    <p>{{ member.lastActive + 'Z' | timeago }}</p>
                 </div>
                 <div>
                     <strong>Member since:</strong>
-                    <p>{{member.created | date: 'longDate' }}</p>
+                    <p>{{ member.created | date: 'longDate' }}</p>
                 </div>
             </div>
             <div class="card-footer">
