--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -21,7 +21,7 @@
             </select>
         </div>
         <button class="btn btn-primary ms-1" type="submit">Apply Filters</button>
-        <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset Filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ms-1">Reset Filters</button>
 
         <div class="col">
             <div class="btn-group float-end">
