--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -41,6 +41,7 @@
                 routerLink="{{ container === 'Outbox' 
                     ? '/members/' + message.recipientUsername 
                     : '/members/' + message.senderUsername }}"
+                [queryParams]="{ tab: 'Messages' }"
             >
                 <td>{{ message.content }}</td>
                 <td>
